QFont::setPixelSize() should permit setting pixel size to zero

QtWebKit needs to allow fonts with pixel size of zero.

http://bugreports.qt.nokia.com/browse/QTBUG-15485
https://bugs.webkit.org/show_bug.cgi?id=49759